--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>TypeCraft</title>
-   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
    <link rel="stylesheet" href="resources/reset.css">
    <link rel="stylesheet" href="resources/control-panel.css">
    <link rel="stylesheet" href="style.css">
@@ -31,16 +31,14 @@
             <div class="type-container">
                </div>
                <p class="hero">A short title is better</p>
-               <!-- <p class="h1">A short title is better</p>
+               <p class="h1">A short title is better</p>
                <p class="h2">A short title is better</p>
                <p class="h3">A short title is better</p>
-               <p class="h4">A short title is better</p> -->
-               <p class="body-big">standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
-
-               </p>
-               <!-- <p class="body">A short title is better</p>
+               <p class="h4">A short title is better</p>
+               <p class="body-big">A short title is better</p>
+               <p class="body">A short title is better</p>
                <p class="body-small">A short title is better</p>
-               <p class="body-x-small">A short title is better</p> -->
+               <p class="body-x-small">A short title is better</p>
             </div>
 
          </div>
@@ -57,12 +55,10 @@
 
 <!-- Break points -->
 <div id="break-bg">
-   <div id="break-line-1">
-      <p>&#8212; break 1</p>
-   </div>
-   <div id="break-line-2"></div>
-   <div id="break-line-3"></div>
-   <div id="break-line-4"></div>
+   <div id="break-line-1"><p>break 1 &#8212;</p></div>
+   <div id="break-line-2"><p>break 2 &#8212;</p></div>
+   <div id="break-line-3"><p>break 3 &#8212;</p></div>
+   <div id="break-line-4"><p>break 4 &#8212;</p></div>
 </div>
 
    <section class="control-panel">
