added favicon and images — now time to program

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <link rel="stylesheet" href="resources/reset.css">
    <link rel="stylesheet" href="resources/control-panel.css">
    <link rel="stylesheet" href="style.css">
+   <link rel="icon" href="images/favicon.png" type="image/png">
 
 </head>
 <body>
@@ -80,55 +81,34 @@
 
                <div class="cp-break-wrapper">
 
-                  <svg id="break-icon-phone" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
-                    <title>phone-icon</title>
-                    <path d="M30.835,9.329a.755.755,0,0,1,.754.754V39.708a.755.755,0,0,1-.754.755H19.165a.755.755,0,0,1-.754-.755V10.083a.755.755,0,0,1,.754-.754h11.67m0-4H19.165a4.753,4.753,0,0,0-4.754,4.754V39.708a4.754,4.754,0,0,0,4.754,4.755h11.67a4.754,4.754,0,0,0,4.754-4.755V10.083a4.753,4.753,0,0,0-4.754-4.754Z"/>
-                  </svg>
-
+                  <img class="cp-icon-outline"src="images/icon-phone.svg" alt="tablet-icon">
+                  <img class="cp-icon-fill"src="images/icon-phone-fill.svg" alt="tablet-icon">
 
                   <input id="break-one" type="text" name="b-type-small" value="x">
 
-                  <svg id="break-icon-tablet" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
-                    <title>tablet-icon</title>
-                    <path d="M35.751,9.329V40.671H14.084V9.329H35.751m.122-4H13.962a3.878,3.878,0,0,0-3.878,3.878V40.793a3.878,3.878,0,0,0,3.878,3.878H35.873a3.878,3.878,0,0,0,3.878-3.878V9.207a3.878,3.878,0,0,0-3.878-3.878Z"/>
-                  </svg>
+                  <img class="cp-icon-outline"src="images/icon-tablet.svg" alt="tablet-icon">
+                  <img class="cp-icon-fill"src="images/icon-tablet-fill.svg" alt="tablet-icon">
 
                   <input id="break-two" type="text" name="b-type-small" value="x">
 
-                  <svg id="break-icon-laptop" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
-                    <title>laptop-icon</title>
-                    <g>
-                      <path d="M39.043,13.4V28.821H10.835V13.4H39.043m1.848-4H8.987a2.152,2.152,0,0,0-2.152,2.153V32.821H43.043V11.552A2.152,2.152,0,0,0,40.891,9.4Z"/>
-                      <path d="M40.1,32.485l1.888,4.1L7.92,36.444l1.689-3.876,30.49-.083m2.559-4.007-35.674.1-4.106,9.43A1.733,1.733,0,0,0,4.46,40.43l41.065.171h.008a1.734,1.734,0,0,0,1.574-2.459l-4.449-9.664Z"/>
-                    </g>
-                  </svg>
-
+                  <img class="cp-icon-outline"src="images/icon-laptop.svg" alt="tablet-icon">
+                  <img class="cp-icon-fill"src="images/icon-laptop-fill.svg" alt="tablet-icon">
 
                </div>
 
                <div class="cp-break-wrapper">
 
+                  <img class="cp-icon-spacer"src="images/icon-desktop.svg" alt="tablet-icon">
+
                   <input class="space-left" id="break-three" type="text" name="b-type-small" value="x">
 
-                  <svg id="break-icon-desktop" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
-                    <title>desktop-icon</title>
-                    <g>
-                      <path d="M42.877,13.394V31.815H7.123V13.394H42.877M44.828,9.5H5.172a1.944,1.944,0,0,0-1.944,1.944V33.766A1.944,1.944,0,0,0,5.172,35.71H44.828a1.944,1.944,0,0,0,1.944-1.944V11.443A1.944,1.944,0,0,0,44.828,9.5Z"/>
-                      <path d="M27.4,34.571s.916,4.579,4.269,5.93H18.336c3.353-1.351,4.269-5.93,4.269-5.93" fill="none" stroke="#000" stroke-linejoin="round" stroke-width="4"/>
-                    </g>
-                  </svg>
-
+                  <img class="cp-icon-outline"src="images/icon-desktop.svg" alt="tablet-icon">
+                  <img class="cp-icon-fill"src="images/icon-desktop-fill.svg" alt="tablet-icon">
 
                   <input id="break-four" type="text" name="b-type-small" value="x">
 
-                  <svg id="break-icon-tv" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
-                    <title>tv-icon</title>
-                    <g>
-                      <path d="M44.6,15.684v17.18H5.4V15.684H44.6m1.6-3.638H3.8a2.037,2.037,0,0,0-2.037,2.037V34.464A2.037,2.037,0,0,0,3.8,36.5H46.2a2.037,2.037,0,0,0,2.037-2.037V14.083A2.037,2.037,0,0,0,46.2,12.046Z"/>
-                      <line x1="20.994" y1="37.954" x2="29.006" y2="37.954" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3.517"/>
-                    </g>
-                  </svg>
-
+                  <img class="cp-icon-outline"src="images/icon-tv.svg" alt="tablet-icon">
+                  <img class="cp-icon-fill"src="images/icon-tv-fill.svg" alt="tablet-icon">
 
                </div>
 
