--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 
 <!-- Break points -->
 <div id="break-bg">
-   <div id="break-line-1"><p>break 1 &#8212;</p></div>
-   <div id="break-line-2"><p>break 2 &#8212;</p></div>
-   <div id="break-line-3"><p>break 3 &#8212;</p></div>
-   <div id="break-line-4"><p>break 4 &#8212;</p></div>
+   <div id="break-line-1"><p>Break 1 &#8212;</p></div>
+   <div id="break-line-2"><p>Break 2 &#8212;</p></div>
+   <div id="break-line-3"><p>Break 3 &#8212;</p></div>
+   <div id="break-line-4"><p>Break 4 &#8212;</p></div>
 </div>
 
    <section class="control-panel">
@@ -81,34 +81,34 @@
 
                <div class="cp-break-wrapper">
 
-                  <img class="cp-icon-outline"src="images/icon-phone.svg" alt="tablet-icon">
-                  <img class="cp-icon-fill"src="images/icon-phone-fill.svg" alt="tablet-icon">
+                  <img class="cp-icon-outline" id="break-icon-phone" src="images/icon-phone.svg" alt="phone-icon">
+                  <img class="cp-icon-fill" id="break-icon-phone-fill" src="images/icon-phone-fill.svg" alt="phone-icon">
 
                   <input id="break-one" type="text" name="b-type-small" value="x">
 
-                  <img class="cp-icon-outline"src="images/icon-tablet.svg" alt="tablet-icon">
-                  <img class="cp-icon-fill"src="images/icon-tablet-fill.svg" alt="tablet-icon">
+                  <img class="cp-icon-outline" id="break-icon-tablet" src="images/icon-tablet.svg" alt="tablet-icon">
+                  <img class="cp-icon-fill" id="break-icon-tablet-fill" src="images/icon-tablet-fill.svg" alt="tablet-icon">
 
                   <input id="break-two" type="text" name="b-type-small" value="x">
 
-                  <img class="cp-icon-outline"src="images/icon-laptop.svg" alt="tablet-icon">
-                  <img class="cp-icon-fill"src="images/icon-laptop-fill.svg" alt="tablet-icon">
+                  <img class="cp-icon-outline" id="break-icon-laptop" src="images/icon-laptop.svg" alt="laptop-icon">
+                  <img class="cp-icon-fill" id="break-icon-laptop-fill" src="images/icon-laptop-fill.svg" alt="laptop-icon">
 
                </div>
 
                <div class="cp-break-wrapper">
 
-                  <img class="cp-icon-spacer"src="images/icon-desktop.svg" alt="tablet-icon">
+                  <img class="cp-icon-spacer" src="images/icon-desktop.svg" alt="tablet-icon">
 
                   <input class="space-left" id="break-three" type="text" name="b-type-small" value="x">
 
-                  <img class="cp-icon-outline"src="images/icon-desktop.svg" alt="tablet-icon">
-                  <img class="cp-icon-fill"src="images/icon-desktop-fill.svg" alt="tablet-icon">
+                  <img class="cp-icon-outline" id="break-icon-desktop" src="images/icon-desktop.svg" alt="desktop-icon">
+                  <img class="cp-icon-fill" id="break-icon-desktop-fill" src="images/icon-desktop-fill.svg" alt="desktop-icon">
 
                   <input id="break-four" type="text" name="b-type-small" value="x">
 
-                  <img class="cp-icon-outline"src="images/icon-tv.svg" alt="tablet-icon">
-                  <img class="cp-icon-fill"src="images/icon-tv-fill.svg" alt="tablet-icon">
+                  <img class="cp-icon-outline" id="break-icon-tv" src="images/icon-tv.svg" alt="tv-icon">
+                  <img class="cp-icon-fill" id="break-icon-tv-fill" src="images/icon-tv-fill.svg" alt="tv-icon">
 
                </div>
 
