tidied up breakpoint presentation

--- a/index.html
+++ b/index.html
@@ -94,13 +94,11 @@
                   <img class="cp-icon-outline" id="break-icon-laptop" src="images/icon-laptop.svg" alt="laptop-icon">
                   <img class="cp-icon-fill" id="break-icon-laptop-fill" src="images/icon-laptop-fill.svg" alt="laptop-icon">
 
+                  <input class="space-left" id="break-three" type="text" name="b-type-small" value="x">
+
                </div>
 
                <div class="cp-break-wrapper">
-
-                  <img class="cp-icon-spacer" src="images/icon-desktop.svg" alt="tablet-icon">
-
-                  <input class="space-left" id="break-three" type="text" name="b-type-small" value="x">
 
                   <img class="cp-icon-outline" id="break-icon-desktop" src="images/icon-desktop.svg" alt="desktop-icon">
                   <img class="cp-icon-fill" id="break-icon-desktop-fill" src="images/icon-desktop-fill.svg" alt="desktop-icon">
@@ -109,6 +107,11 @@
 
                   <img class="cp-icon-outline" id="break-icon-tv" src="images/icon-tv.svg" alt="tv-icon">
                   <img class="cp-icon-fill" id="break-icon-tv-fill" src="images/icon-tv-fill.svg" alt="tv-icon">
+
+                  <!-- spacer layers -->
+                  <input type="text" name="b-type-small" value="++">
+                  <img class="cp-icon-spacer" src="images/icon-desktop.svg" alt="tablet-icon">
+                  <input class="cp-input-spacer" type="text" name="b-type-small" value="x">
 
                </div>
 
