--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <img class="cp-icon-fill" id="break-icon-tv-fill" src="images/icon-tv-fill.svg" alt="tv-icon">
 
                   <!-- spacer layers -->
-                  <input type="text" name="b-type-small" value="++">
+                  <input type="text" name="b-type-small" value="&#8734;">
                   <img class="cp-icon-spacer" src="images/icon-desktop.svg" alt="tablet-icon">
                   <input class="cp-input-spacer" type="text" name="b-type-small" value="x">
 
