--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <!-- Intro -->
             <h1>TypeCraft
             <br>&#8212;</h1>
-            <p>Welcome to your new browser based playground. Experiment with the below variables until all is lekker.
+            <p class="intro">Welcome to your new browser based playground. Experiment with the below variables until all is lekker.</p>
 
             <!-- Breakpoints -->
             <div class="cp-form-block">
@@ -84,17 +84,17 @@
                   <img class="cp-icon-outline" id="break-icon-phone" src="images/icon-phone.svg" alt="phone-icon">
                   <img class="cp-icon-fill" id="break-icon-phone-fill" src="images/icon-phone-fill.svg" alt="phone-icon">
 
-                  <input id="break-one" type="text" name="b-type-small" value="x">
+                  <input id="break-one" class="break-highlight-1" type="text" name="b-type-small" value="x">
 
                   <img class="cp-icon-outline" id="break-icon-tablet" src="images/icon-tablet.svg" alt="tablet-icon">
                   <img class="cp-icon-fill" id="break-icon-tablet-fill" src="images/icon-tablet-fill.svg" alt="tablet-icon">
 
-                  <input id="break-two" type="text" name="b-type-small" value="x">
+                  <input id="break-two" class="break-highlight-2" type="text" name="b-type-small" value="x">
 
                   <img class="cp-icon-outline" id="break-icon-laptop" src="images/icon-laptop.svg" alt="laptop-icon">
                   <img class="cp-icon-fill" id="break-icon-laptop-fill" src="images/icon-laptop-fill.svg" alt="laptop-icon">
 
-                  <input class="space-left" id="break-three" type="text" name="b-type-small" value="x">
+                  <input id="break-three" class="break-highlight-3" type="text" name="b-type-small" value="x">
 
                </div>
 
@@ -103,7 +103,7 @@
                   <img class="cp-icon-outline" id="break-icon-desktop" src="images/icon-desktop.svg" alt="desktop-icon">
                   <img class="cp-icon-fill" id="break-icon-desktop-fill" src="images/icon-desktop-fill.svg" alt="desktop-icon">
 
-                  <input id="break-four" type="text" name="b-type-small" value="x">
+                  <input id="break-four" class="break-highlight-4" type="text" name="b-type-small" value="x">
 
                   <img class="cp-icon-outline" id="break-icon-tv" src="images/icon-tv.svg" alt="tv-icon">
                   <img class="cp-icon-fill" id="break-icon-tv-fill" src="images/icon-tv-fill.svg" alt="tv-icon">
@@ -124,17 +124,17 @@
                <div class="cp-form">
                   <!-- labels -->
                   <div>
-                     <p>small</p>
-                     <p>medium</p>
-                     <p>large</p>
-                     <p>x-large</p>
+                     <p class="break-highlight-1 label">small</p>
+                     <p class="break-highlight-2 label">medium</p>
+                     <p class="break-highlight-3 label">large</p>
+                     <p class="break-highlight-4 label">x-large</p>
                   </div>
                   <!-- inputs -->
                   <div class="cp-input-block">
-                     <input id="base-type-s" type="text" name="b-type-small" value="x">
-                     <input id="base-type-m" type="text" name="b-type-small" value="x">
-                     <input id="base-type-l" type="text" name="b-type-small" value="x">
-                     <input id="base-type-xl" type="text" name="b-type-small" value="x">
+                     <input id="base-type-s" class="break-highlight-1" type="text" name="b-type-small" value="x">
+                     <input id="base-type-m" class="break-highlight-2" type="text" name="b-type-small" value="x">
+                     <input id="base-type-l" class="break-highlight-3" type="text" name="b-type-small" value="x">
+                     <input id="base-type-xl" class="break-highlight-4" type="text" name="b-type-small" value="x">
                   </div>
                </div>
             </div>
@@ -145,17 +145,17 @@
                <div class="cp-form">
                   <!-- labels -->
                   <div>
-                     <p>small</p>
-                     <p>medium</p>
-                     <p>large</p>
-                     <p>x-large</p>
+                     <p class="break-highlight-1 label">small</p>
+                     <p class="break-highlight-2 label">medium</p>
+                     <p class="break-highlight-3 label">large</p>
+                     <p class="break-highlight-4 label">x-large</p>
                   </div>
                   <!-- inputs -->
                   <div class="cp-input-block">
-                     <input id="base-scale-s" type="text" name="b-type-small" value="x">
-                     <input id="base-scale-m" type="text" name="b-type-small" value="x">
-                     <input id="base-scale-l" type="text" name="b-type-small" value="x">
-                     <input id="base-scale-xl" type="text" name="b-type-small" value="x">
+                     <input id="base-scale-s" class="break-highlight-1" type="text" name="b-type-small" value="x">
+                     <input id="base-scale-m" class="break-highlight-2" type="text" name="b-type-small" value="x">
+                     <input id="base-scale-l" class="break-highlight-3" type="text" name="b-type-small" value="x">
+                     <input id="base-scale-xl" class="break-highlight-4" type="text" name="b-type-small" value="x">
                   </div>
                </div>
             </div>
@@ -172,9 +172,9 @@
                   </div>
                   <!-- inputs -->
                   <div class="cp-input-block">
-                     <input id="min-type" type="text" name="b-type-small" value="x">
-                     <input id="max-type-small" type="text" name="b-type-small" value="x">
-                     <input id="max-type-x-small" type="text" name="b-type-small" value="x">
+                     <input id="min-type" class="alwaysOn" type="text" name="b-type-small" value="x">
+                     <input id="max-type-small" type="text" class="alwaysOn" name="b-type-small" value="x">
+                     <input id="max-type-x-small" type="text" class="alwaysOn" name="b-type-small" value="x">
                   </div>
                </div>
             </div>
