updated break indicator and fonts – tidied up storage

--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>TypeCraft</title>
-   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
    <link rel="stylesheet" href="resources/reset.css">
-   <link rel="stylesheet" href="resources/control-panel.css">
    <link rel="stylesheet" href="style.css">
-   <link rel="icon" href="images/favicon.png" type="image/png">
+   <link rel="stylesheet" href="resources/control-panel.css">
+   <link rel="icon" href="resources/cp-images/favicon.png" type="image/png">
 
 </head>
 <body>
 
 
-<!-- ////////////////////  Designer Zone  //////////////////// -->
+<!-- ////////////////////  Designer Content  //////////////////// -->
 
 
    <div class="container">
@@ -39,6 +38,32 @@
       </div>
 
    </div>
+
+
+
+
+
+<!-- ////////////////////   End of: Designer Content  //////////////////// -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -81,38 +106,27 @@
 
                <div class="cp-break-wrapper">
 
-                  <img class="cp-icon-outline" id="break-icon-phone" src="images/icon-phone.svg" alt="phone-icon">
-                  <img class="cp-icon-fill" id="break-icon-phone-fill" src="images/icon-phone-fill.svg" alt="phone-icon">
-
-                  <input id="break-one" class="break-highlight-1" type="text" name="b-type-small" value="x">
-
-                  <img class="cp-icon-outline" id="break-icon-tablet" src="images/icon-tablet.svg" alt="tablet-icon">
-                  <img class="cp-icon-fill" id="break-icon-tablet-fill" src="images/icon-tablet-fill.svg" alt="tablet-icon">
-
-                  <input id="break-two" class="break-highlight-2" type="text" name="b-type-small" value="x">
-
-                  <img class="cp-icon-outline" id="break-icon-laptop" src="images/icon-laptop.svg" alt="laptop-icon">
-                  <img class="cp-icon-fill" id="break-icon-laptop-fill" src="images/icon-laptop-fill.svg" alt="laptop-icon">
-
-                  <input id="break-three" class="break-highlight-3" type="text" name="b-type-small" value="x">
-
+                  <img class="cp-icon-outline" id="break-icon-phone" src="resources/cp-images/icon-phone.svg" alt="phone-icon">
+                  <img class="cp-icon-fill" id="break-icon-phone-fill" src="resources/cp-images/icon-phone-fill.svg" alt="phone-icon">
+                  <div class="divider"></div>
+                  <img class="cp-icon-outline" id="break-icon-tablet" src="resources/cp-images/icon-tablet.svg" alt="tablet-icon">
+                  <img class="cp-icon-fill" id="break-icon-tablet-fill" src="resources/cp-images/icon-tablet-fill.svg" alt="tablet-icon">
+                  <div class="divider"></div>
+                  <img class="cp-icon-outline" id="break-icon-laptop" src="resources/cp-images/icon-laptop.svg" alt="laptop-icon">
+                  <img class="cp-icon-fill" id="break-icon-laptop-fill" src="resources/cp-images/icon-laptop-fill.svg" alt="laptop-icon">
+                  <div class="divider"></div>
+                  <img class="cp-icon-outline" id="break-icon-desktop" src="resources/cp-images/icon-desktop.svg" alt="desktop-icon">
+                  <img class="cp-icon-fill" id="break-icon-desktop-fill" src="resources/cp-images/icon-desktop-fill.svg" alt="desktop-icon">
+                  <div class="divider"></div>
+                  <img class="cp-icon-outline" id="break-icon-tv" src="resources/cp-images/icon-tv.svg" alt="tv-icon">
+                  <img class="cp-icon-fill" id="break-icon-tv-fill" src="resources/cp-images/icon-tv-fill.svg" alt="tv-icon">
                </div>
 
                <div class="cp-break-wrapper">
-
-                  <img class="cp-icon-outline" id="break-icon-desktop" src="images/icon-desktop.svg" alt="desktop-icon">
-                  <img class="cp-icon-fill" id="break-icon-desktop-fill" src="images/icon-desktop-fill.svg" alt="desktop-icon">
-
+                  <input id="break-one" class="break-highlight-1" type="text" name="b-type-small" value="x">
+                  <input id="break-two" class="break-highlight-2" type="text" name="b-type-small" value="x">
+                  <input id="break-three" class="break-highlight-3" type="text" name="b-type-small" value="x">
                   <input id="break-four" class="break-highlight-4" type="text" name="b-type-small" value="x">
-
-                  <img class="cp-icon-outline" id="break-icon-tv" src="images/icon-tv.svg" alt="tv-icon">
-                  <img class="cp-icon-fill" id="break-icon-tv-fill" src="images/icon-tv-fill.svg" alt="tv-icon">
-
-                  <!-- spacer layers -->
-                  <input type="text" name="b-type-small" value="&#8734;">
-                  <img class="cp-icon-spacer" src="images/icon-desktop.svg" alt="tablet-icon">
-                  <input class="cp-input-spacer" type="text" name="b-type-small" value="x">
-
                </div>
 
             </div>
