--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
             <!-- Intro -->
 
-            <img class="logo" src="resources/cp-images/logo.svg" alt="logo">
-            <div class="em-dash"></div>
+            <h1>TypeCraft
+            <br>&#8212;</h1>
             <p class="intro">Welcome to your new browser based playground. Experiment with the below variables until all is lekker.</p>
 
             <!-- Breakpoints -->
