5th breakpoint logic working!!!

--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
                </div>
 
                <div class="cp-break-wrapper">
-                  <input id="break-one" class="break-highlight-1" type="text" name="b-type-small" value="x">
-                  <input id="break-two" class="break-highlight-2" type="text" name="b-type-small" value="x">
-                  <input id="break-three" class="break-highlight-3" type="text" name="b-type-small" value="x">
-                  <input id="break-four" class="break-highlight-4" type="text" name="b-type-small" value="x">
+                  <input id="break-one" class="break-highlight-1" type="text" value="x">
+                  <input id="break-two" class="break-highlight-2" type="text" value="x">
+                  <input id="break-three" class="break-highlight-3" type="text" value="x">
+                  <input id="break-four" class="break-highlight-4" type="text" value="x">
                </div>
 
             </div>
@@ -143,13 +143,15 @@
                      <p class="break-highlight-2 label">medium</p>
                      <p class="break-highlight-3 label">large</p>
                      <p class="break-highlight-4 label">x-large</p>
+                     <p class="break-highlight-5 label">xx-large</p>
                   </div>
                   <!-- inputs -->
                   <div class="cp-input-block">
-                     <input id="base-type-s" class="break-highlight-1" type="text" name="b-type-small" value="x">
-                     <input id="base-type-m" class="break-highlight-2" type="text" name="b-type-small" value="x">
-                     <input id="base-type-l" class="break-highlight-3" type="text" name="b-type-small" value="x">
-                     <input id="base-type-xl" class="break-highlight-4" type="text" name="b-type-small" value="x">
+                     <input id="base-type-s" class="break-highlight-1" type="text" value="x">
+                     <input id="base-type-m" class="break-highlight-2" type="text" value="x">
+                     <input id="base-type-l" class="break-highlight-3" type="text" value="x">
+                     <input id="base-type-xl" class="break-highlight-4" type="text" value="x">
+                     <input id="base-type-xxl" class="break-highlight-5" type="text" value="x">
                   </div>
                </div>
             </div>
@@ -164,13 +166,15 @@
                      <p class="break-highlight-2 label">medium</p>
                      <p class="break-highlight-3 label">large</p>
                      <p class="break-highlight-4 label">x-large</p>
+                     <p class="break-highlight-5 label">xx-large</p>
                   </div>
                   <!-- inputs -->
                   <div class="cp-input-block">
-                     <input id="base-scale-s" class="break-highlight-1" type="text" name="b-type-small" value="x">
-                     <input id="base-scale-m" class="break-highlight-2" type="text" name="b-type-small" value="x">
-                     <input id="base-scale-l" class="break-highlight-3" type="text" name="b-type-small" value="x">
-                     <input id="base-scale-xl" class="break-highlight-4" type="text" name="b-type-small" value="x">
+                     <input id="base-scale-s" class="break-highlight-1" type="text" value="x">
+                     <input id="base-scale-m" class="break-highlight-2" type="text" value="x">
+                     <input id="base-scale-l" class="break-highlight-3" type="text" value="x">
+                     <input id="base-scale-xl" class="break-highlight-4" type="text" value="x">
+                     <input id="base-scale-xxl" class="break-highlight-5" type="text" value="x">
                   </div>
                </div>
             </div>
@@ -187,9 +191,9 @@
                   </div>
                   <!-- inputs -->
                   <div class="cp-input-block">
-                     <input id="min-type" class="alwaysOn" type="text" name="b-type-small" value="x">
-                     <input id="max-type-small" type="text" class="alwaysOn" name="b-type-small" value="x">
-                     <input id="max-type-x-small" type="text" class="alwaysOn" name="b-type-small" value="x">
+                     <input id="min-type" class="alwaysOn" type="text" value="x">
+                     <input id="max-type-small" type="text" class="alwaysOn" value="x">
+                     <input id="max-type-x-small" type="text" class="alwaysOn" value="x">
                   </div>
                </div>
             </div>
