--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>TypeCraft</title>
+   <link href="https://fonts.googleapis.com/css?family=Bitter|Open+Sans" rel="stylesheet">
    <link rel="stylesheet" href="resources/reset.css">
    <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" href="resources/control-panel.css">
@@ -86,10 +87,10 @@
 
          <!-- Button -->
          <div class="cp-button" id="cp-button-on">
-            <img src="images/carot-reverse.svg" alt="button">
+            <img src="resources/cp-images/carot-reverse.svg" alt="button">
          </div>
          <div class="cp-button" id="cp-button-off">
-            <img src="images/carot.svg" alt="button">
+            <img src="resources/cp-images/carot.svg" alt="button">
          </div>
 
          <div class="cp-panel">
