--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
 
             <!-- Intro -->
 
-            <h1>TypeCraft
-            <br>&#8212;</h1>
+            <!-- <h1>TypeCraft
+            <br>&#8212;</h1> -->
+            <img class="logo" src="resources/cp-images/logo.svg" alt="logo">
+            <div class="em-dash"></div>
             <p class="intro">Welcome to your new browser based playground. Experiment with the below variables until all is lekker.</p>
 
             <!-- Breakpoints -->
