--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
          <div class="cp-panel">
 
             <!-- Intro -->
-            <img class="logo" src="resources/cp-images/logo.svg" alt="logo">
+            <img class="logo" src="resources/cp-images/logo.png" alt="logo">
             <div class="em-dash"></div>
             <p class="intro">Welcome to your new browser based playground. Experiment with the below variables until all is lekker.</p>
 
