--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div class="type-wrapper">
          <div class="bread-crumb">
-            <span>/TypeCraft Demo 1.0</span>
+            <span>/ TypeCraft 1.0</span>
          </div>
 
          <div class="content">
@@ -98,7 +98,8 @@
             <!-- Intro -->
             <img class="logo" src="resources/cp-images/logo.png" alt="logo">
             <div class="em-dash"></div>
-            <p class="intro">Welcome to your new browser based playground. Experiment with the below variables until all is lekker.</p>
+            <p class="intro">Welcome to your new browser based playground. Experiment with the below inputs until lekker.</p>
+            <p><a href="https://github.com/JoshN-2018/TypeCraft">Want to change the font?</a></p>
 
             <!-- Breakpoints -->
             <div class="cp-form-block">
