--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>TypeCraft</title>
-   <link href="https://fonts.googleapis.com/css?family=Bitter|Open+Sans" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Bitter|Open+Sans:400" rel="stylesheet">
    <link rel="stylesheet" href="resources/reset.css">
    <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" href="resources/control-panel.css">
@@ -99,7 +99,7 @@
             <img class="logo" src="resources/cp-images/logo.png" alt="logo">
             <div class="em-dash"></div>
             <p class="intro">Welcome to your new browser based playground. Experiment with the below inputs until lekker.</p>
-            <p><a href="https://github.com/JoshN-2018/TypeCraft">Want to change the font?</a></p>
+            <p><a href="https://github.com/JoshN-2018/TypeCraft" target="_blank">Want to change the font?</a></p>
 
             <!-- Breakpoints -->
             <div class="cp-form-block">
