--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                </div>
 
             </div>
-            <p>* means the value is for the current breakpoint </p>
+            <!-- <p>* means the value is for the current breakpoint </p> -->
 
             <!-- Functionality -->
             <div class="cp-form-block">
