--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>TypeCraft</title>
-   <link href="https://fonts.googleapis.com/css?family=Bitter|Open+Sans:400" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Bitter|Open+Sans:400,600" rel="stylesheet">
    <link rel="stylesheet" href="resources/reset.css">
    <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" href="resources/control-panel.css">
@@ -79,8 +79,8 @@
             <!-- Intro -->
             <img class="logo" src="resources/cp-images/logo.png" alt="logo">
             <div class="em-dash"></div>
-            <p class="intro">Welcome to your new browser based playground. Experiment with the below inputs until perfect.</p>
-            <p><a href="https://github.com/JoshN-2018/TypeCraft" target="_blank">Want to change the font?</a></p>
+            <p class="intro"><strong>Resize the browser</strong> to craft typography thats perfect at every break-point. Inputs that are black are affecting the in <strong>current</strong> break point.</p>
+            <!-- <p><a href="https://github.com/JoshN-2018/TypeCraft" target="_blank">Want to change the font?</a></p> -->
 
             <!-- Breakpoints -->
             <div class="cp-form-block">
