--- a/index.html
+++ b/index.html
@@ -140,7 +140,19 @@
 
             <div class="cp-form-block">
                <hr class="cp-hr">
-               <h4>Type scale</h4>
+               <div class="sect-title container-flex">
+                  <h4>Type scale</h4>
+                  <span class="tip-link">What's this?</span>
+               </div>
+               <div class="tip-box container-flex">
+                  <p class="tip-message">
+                     The type scale allows you to control the contrast between the levels in your hierarchy. Larger numbers mean bigger more exaggerated steps.
+                  </p>
+                  <div>
+                     <img src="resources/cp-images/icon-cross.svg" alt="cross">
+                  </div>
+               </div>
+
                <div class="cp-form">
                   <!-- labels -->
                   <div>
