--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                </div>
                <div id="tip-boxTS" class="tip-box container-flex">
                   <p class="tip-message">
-                     The type scale allows you to control the contrast between the levels in your hierarchy. Larger numbers mean bigger more exaggerated steps.
+                     The Type Scale allows you to control the contrast between the levels in your hierarchy. Larger numbers mean bigger more exaggerated steps.
                   </p>
                   <div class="tip-close">
                      <img src="resources/cp-images/icon-cross.svg" alt="cross">
