added scale driven spacing between type levels

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>TypeCraft</title>
-   <link href="https://fonts.googleapis.com/css?family=Bitter|Open+Sans:400,600" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Roboto:400,600" rel="stylesheet">
    <link rel="stylesheet" href="resources/reset.css">
    <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" href="resources/control-panel.css">
@@ -24,15 +24,15 @@
          </div>
 
          <div class="content">
-            <p class="hero">It's a state of mind</p>
-            <p class="h1">It's a state of mind</p>
-            <p class="h2">It's a state of mind</p>
-            <p class="h3">It's a state of mind</p>
-            <p class="h4">It's a state of mind</p>
-            <p class="body-big">It's a state of mind</p>
-            <p class="body">It's a state of mind</p>
-            <p class="body-small">It's a state of mind</p>
-            <p class="body-x-small">It's a state of mind</p>
+            <p class="hero">Scales for Interact</p>
+            <p class="h1">Scales for Interact</p>
+            <p class="h2">Scales for Interact</p>
+            <p class="h3">Scales for Interact</p>
+            <p class="h4">Scales for Interact</p>
+            <p class="body-big">Scales for Interact</p>
+            <p class="body">Scales for Interact</p>
+            <p class="body-small">Scales for Interact</p>
+            <p class="body-x-small">Scales for Interact</p>
          </div>
 
       </div>
