--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>TypeCraft</title>
-   <link href="https://fonts.googleapis.com/css?family=Roboto:400,600" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Bitter|Open+Sans:400,600" rel="stylesheet">
    <link rel="stylesheet" href="resources/reset.css">
    <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" href="resources/control-panel.css">
