--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
          </div>
 
          <div class="content">
-            <p class="hero">It's a state of mind</p>
-            <p class="h1">It's a state of mind</p>
-            <p class="h2">It's a state of mind</p>
-            <p class="h3">It's a state of mind</p>
-            <p class="h4">It's a state of mind</p>
-            <p class="body-big">It's a state of mind</p>
-            <p class="body">It's a state of mind</p>
-            <p class="body-small">It's a state of mind</p>
-            <p class="body-x-small">It's a state of mind</p>
+            <p id="render-text" class="hero render-text">It's a state of mind</p>
+            <p class="h1 render-text">It's a state of mind</p>
+            <p class="h2 render-text">It's a state of mind</p>
+            <p class="h3 render-text">It's a state of mind</p>
+            <p class="h4 render-text">It's a state of mind</p>
+            <p class="body-big render-text">It's a state of mind</p>
+            <p class="body render-text">It's a state of mind</p>
+            <p class="body-small render-text">It's a state of mind</p>
+            <p class="body-x-small render-text">It's a state of mind</p>
          </div>
 
       </div>
@@ -79,7 +79,7 @@
             <!-- Intro -->
             <img class="logo" src="resources/cp-images/logo.png" alt="logo">
             <div class="em-dash"></div>
-            <p class="intro"><strong>Resize the browser</strong> to craft typography thats perfect at every break-point. Inputs that are black are affecting the in <strong>current</strong> break point.</p>
+            <p class="intro"><strong>Resize the browser window</strong> to craft typography thats perfect at every break-point. Inputs that are <span style="color: #1432FF;">blue</span> are active in this breakpoint.</p>
             <!-- <p><a href="https://github.com/JoshN-2018/TypeCraft" target="_blank">Want to change the font?</a></p> -->
 
             <!-- Breakpoints -->
